--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,14 @@
 
 	<groupId>io.github.x-englishwordnet</groupId>
 	<artifactId>grind</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>io.github.x-englishwordnet</groupId>
+			<artifactId>parse</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 	<name>grind</name>
 	<description>Grind X-English WordNet into WNDB.</description>
 	<url>https://github.com/x-englishwordnet/grind</url>
